# pyhpc

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: python-application.yml  python-deploy.yml
pyhpc/: __init__.py
tests/: test_pyhpc.py
