[tool.poetry]
name = "pyhpc"
version = "0.0.0"
description = ""
authors = ["Justin Fear <justin.fear@nih.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
persist-queue = "^0.5.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.10.1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
